fix: adjust z-index of dialog box

--- a/src/css/tinymcerte.css
+++ b/src/css/tinymcerte.css
@@ -41,3 +41,7 @@
     background-position: center;
     cursor: pointer;
 }
+
+.tox.tox-tinymce-aux {
+    z-index: 10000;
+}
